Character string settings

--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -662,13 +662,13 @@ END
 IDD_TREESETTINGS_GENERIC DIALOGEX 0, 0, 197, 169
 STYLE DS_CONTROL | WS_CHILD
 EXSTYLE WS_EX_APPWINDOW
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
     LISTBOX         IDC_TREESETTINGS_GENERIC_LIST,0,0,197,112,LBS_SORT | 
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_HSCROLL | 
                     WS_TABSTOP
     EDITTEXT        IDC_TREESETTINGS_GENERIC_EDIT,11,125,63,14,
-                    ES_AUTOHSCROLL | ES_NUMBER | NOT WS_VISIBLE
+                    ES_AUTOHSCROLL | NOT WS_VISIBLE
     CONTROL         "Spin1",IDC_TREESETTINGS_GENERIC_SPIN,"msctls_updown32",
                     UDS_ALIGNRIGHT | UDS_ARROWKEYS | NOT WS_VISIBLE,75,125,
                     11,14
