New field to enter character string in tree settings dialog box

--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -668,7 +668,7 @@ BEGIN
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_HSCROLL | 
                     WS_TABSTOP
     EDITTEXT        IDC_TREESETTINGS_GENERIC_EDIT,11,125,63,14,
-                    ES_AUTOHSCROLL | NOT WS_VISIBLE
+                    ES_AUTOHSCROLL | ES_NUMBER | NOT WS_VISIBLE
     CONTROL         "Spin1",IDC_TREESETTINGS_GENERIC_SPIN,"msctls_updown32",
                     UDS_ALIGNRIGHT | UDS_ARROWKEYS | NOT WS_VISIBLE,75,125,
                     11,14
@@ -707,6 +707,8 @@ BEGIN
                     IDC_TREESETTINGS_GENERIC_SAVEPER_AUDIOINPUT,"Button",
                     BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,65,21,51,
                     11
+    EDITTEXT        IDC_TREESETTINGS_GENERIC_EDIT2,12,125,167,14,
+                    ES_AUTOHSCROLL | NOT WS_VISIBLE
 END
 
 IDD_TREESETTINGS_NOPROPERTIES DIALOG DISCARDABLE  0, 0, 186, 141
