--- a/DScaler5/GenDMOProp/GenDMOProp.rc
+++ b/DScaler5/GenDMOProp/GenDMOProp.rc
@@ -130,11 +130,22 @@ IDR_LICENSEPROPPAGE     REGISTRY DISCARDABLE    "LicensePropPage.rgs"
 // Dialog
 //
 
-IDD_GENDMOPROPPAGE DIALOGEX 0, 0, 271, 105
+IDD_GENDMOPROPPAGE DIALOG DISCARDABLE  0, 0, 271, 105
 STYLE WS_CHILD
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
-    LTEXT           "Insert your controls here.",-1,57,43,178,9
+    LISTBOX         IDC_PARAMETERLIST,1,1,84,104,LBS_NOINTEGRALHEIGHT | 
+                    WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Slider1",IDC_SLIDER,"msctls_trackbar32",TBS_BOTH | 
+                    TBS_NOTICKS | WS_TABSTOP,121,45,150,16
+    CONTROL         "Check1",IDC_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,
+                    100,6,149,15
+    EDITTEXT        IDC_EDIT,99,7,126,13,ES_AUTOHSCROLL
+    LTEXT           "Units:",IDC_STATIC,100,22,22,10
+    SCROLLBAR       IDC_SCROLLBAR,105,41,9,17,SBS_VERT
+    COMBOBOX        IDC_COMBO,100,7,141,54,CBS_DROPDOWN | WS_VSCROLL | 
+                    WS_TABSTOP
+    LTEXT           "Static",IDC_UNITS,128,23,98,11
 END
 
 IDD_LICENSEPROPPAGE DIALOGEX 0, 0, 271, 105
