--- a/DScaler5/GenDMOProp/GenDMOProp.rc
+++ b/DScaler5/GenDMOProp/GenDMOProp.rc
@@ -102,6 +102,8 @@ BEGIN
     IDS_DOCSTRINGGenDMOPropPage "Properties for this DMO"
     IDS_TITLELicensePropPage "License"
     IDS_DOCSTRINGLicensePropPage "License for this Filter"
+    IDS_GPL                 "This filter comes with ABSOLUTELY NO WARRANTY.  This software is licenced under the terms of the GNU GPL. See http://www.fsf.org/licenses/gpl.html for details."
+    IDS_LGPL                "This filter comes with ABSOLUTELY NO WARRANTY.  This software is licenced under the terms of the GNU LGPL. See http://www.fsf.org/licenses/lgpl.html for details."
 END
 
 #endif    // English (U.S.) resources
@@ -148,11 +150,14 @@ BEGIN
     LTEXT           "Static",IDC_UNITS,128,23,98,11
 END
 
-IDD_LICENSEPROPPAGE DIALOGEX 0, 0, 271, 105
+IDD_LICENSEPROPPAGE DIALOG DISCARDABLE  0, 0, 271, 105
 STYLE WS_CHILD
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
-    LTEXT           "Insert your controls here.",-1,57,43,178,9
+    LTEXT           "Static",IDC_NAME,1,2,270,12
+    LTEXT           "Static",IDC_COPYRIGHT,1,21,270,27
+    LTEXT           "Static",IDC_LICENSE,1,55,270,33
+    LTEXT           "Static",IDC_HOMEPAGE,1,93,266,11
 END
 
 #endif    // English (U.K.) resources
