--- a/DScaler5/GenDMOProp/GenDMOProp.rc
+++ b/DScaler5/GenDMOProp/GenDMOProp.rc
@@ -68,17 +68,21 @@ VS_VERSION_INFO VERSIONINFO
 BEGIN
     BLOCK "StringFileInfo"
     BEGIN
-        BLOCK "040904B0"
+        BLOCK "040904b0"
         BEGIN
-            VALUE "CompanyName", "\0"
+            VALUE "Comments", "This file is licensed under the LGPL\0"
+            VALUE "CompanyName", "DScaler Team\0"
             VALUE "FileDescription", "GenDMOProp Module\0"
             VALUE "FileVersion", "1, 0, 0, 1\0"
             VALUE "InternalName", "GenDMOProp\0"
-            VALUE "LegalCopyright", "Copyright 2003\0"
+            VALUE "LegalCopyright", "Copyright 2003 John Adcock et al\0"
+            VALUE "LegalTrademarks", "(c) 2003 John Adcock\0"
+            VALUE "OLESelfRegister", "\0"
             VALUE "OriginalFilename", "GenDMOProp.DLL\0"
+            VALUE "PrivateBuild", "\0"
             VALUE "ProductName", "GenDMOProp Module\0"
             VALUE "ProductVersion", "1, 0, 0, 1\0"
-            VALUE "OLESelfRegister", "\0"
+            VALUE "SpecialBuild", "\0"
         END
     END
     BLOCK "VarFileInfo"
