--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -583,48 +583,50 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,122,154,50,14
 END
 
-IDD_OVERLAYSETTINGS DIALOG DISCARDABLE  0, 0, 372, 185
+IDD_OVERLAYSETTINGS DIALOG DISCARDABLE  0, 0, 372, 202
 STYLE DS_SYSMODAL | DS_SETFOREGROUND | DS_3DLOOK | WS_POPUP | WS_VISIBLE | 
     WS_CAPTION | WS_SYSMENU
 CAPTION "Overlay Settings"
 FONT 8, "MS Sans Serif"
 BEGIN
-    LTEXT           "&Brightness",IDC_STATIC,12,39,33,10
+    LTEXT           "&Brightness",IDC_STATIC,12,54,33,10
     CONTROL         "Slider1",IDC_SLIDER1,"msctls_trackbar32",TBS_TOP | 
-                    WS_TABSTOP,56,31,258,20
-    EDITTEXT        IDC_D1,322,36,35,12,ES_CENTER | ES_AUTOHSCROLL | 
+                    WS_TABSTOP,56,46,258,20
+    EDITTEXT        IDC_D1,322,51,35,12,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED | NOT WS_TABSTOP
-    LTEXT           "Con&trast",IDC_STATIC,12,60,33,10
+    LTEXT           "Con&trast",IDC_STATIC,12,75,33,10
     CONTROL         "Slider1",IDC_SLIDER2,"msctls_trackbar32",TBS_TOP | 
-                    WS_TABSTOP,56,52,258,20
-    EDITTEXT        IDC_D2,322,57,35,12,ES_CENTER | ES_AUTOHSCROLL | 
+                    WS_TABSTOP,56,67,258,20
+    EDITTEXT        IDC_D2,322,72,35,12,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED | NOT WS_TABSTOP
-    LTEXT           "&Hue",IDC_STATIC,12,79,33,10
+    LTEXT           "&Hue",IDC_STATIC,12,94,33,10
     CONTROL         "Slider1",IDC_SLIDER3,"msctls_trackbar32",TBS_TOP | 
-                    WS_TABSTOP,56,71,258,20
-    EDITTEXT        IDC_D3,322,76,35,12,ES_CENTER | ES_AUTOHSCROLL | 
+                    WS_TABSTOP,56,86,258,20
+    EDITTEXT        IDC_D3,322,91,35,12,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED | NOT WS_TABSTOP
-    LTEXT           "&Color",IDC_STATIC,12,100,33,10
+    LTEXT           "&Color",IDC_STATIC,12,115,33,10
     CONTROL         "Slider1",IDC_SLIDER4,"msctls_trackbar32",TBS_TOP | 
-                    WS_TABSTOP,56,92,258,20
-    EDITTEXT        IDC_D4,322,97,35,12,ES_CENTER | ES_AUTOHSCROLL | 
+                    WS_TABSTOP,56,107,258,20
+    EDITTEXT        IDC_D4,322,112,35,12,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED | NOT WS_TABSTOP
-    LTEXT           "&Gamma",IDC_STATIC,12,119,33,10
+    LTEXT           "&Gamma",IDC_STATIC,12,134,33,10
     CONTROL         "Slider1",IDC_SLIDER5,"msctls_trackbar32",TBS_TOP | 
-                    WS_TABSTOP,56,111,258,20
-    EDITTEXT        IDC_D5,322,116,35,12,ES_CENTER | ES_AUTOHSCROLL | 
+                    WS_TABSTOP,56,126,258,20
+    EDITTEXT        IDC_D5,322,131,35,12,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED | NOT WS_TABSTOP
-    LTEXT           "&Sharpness",IDC_STATIC,12,140,33,10
+    LTEXT           "&Sharpness",IDC_STATIC,12,155,33,10
     CONTROL         "Slider1",IDC_SLIDER6,"msctls_trackbar32",TBS_TOP | 
-                    WS_TABSTOP,56,132,258,20
-    EDITTEXT        IDC_D6,322,137,35,12,ES_CENTER | ES_AUTOHSCROLL | 
+                    WS_TABSTOP,56,147,258,20
+    EDITTEXT        IDC_D6,322,152,35,12,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED | NOT WS_TABSTOP
-    DEFPUSHBUTTON   "&OK",IDOK,5,165,45,15
-    PUSHBUTTON      "Cancel",IDCANCEL,57,165,45,15,WS_GROUP
-    PUSHBUTTON      "&Default",IDC_DEFAULT,110,165,45,15
+    DEFPUSHBUTTON   "&OK",IDOK,5,182,45,15
+    PUSHBUTTON      "Cancel",IDCANCEL,57,182,45,15,WS_GROUP
+    PUSHBUTTON      "&Default",IDC_DEFAULT,110,182,45,15
     CONTROL         "Use Overlay Controls",IDC_OVERLAYSETTINGS_ENABLE,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,5,4,92,14
-    GROUPBOX        "",IDC_STATIC,5,20,362,139
+                    BS_AUTOCHECKBOX | WS_TABSTOP,5,10,92,14
+    GROUPBOX        "",IDC_STATIC,5,35,362,139
+    LTEXT           "With certain graphic cards (like ATI Radeon cards), when the window is not on the primary monitor, the DScaler overlay adjustments will not be taken into account. In this case, use the overlay adjustments of your graphic card driver.",
+                    IDC_STATIC,105,4,252,26
 END
 
 IDD_TREESETTING DIALOG DISCARDABLE  0, 0, 336, 201
@@ -1827,7 +1829,7 @@ BEGIN
         LEFTMARGIN, 5
         RIGHTMARGIN, 367
         TOPMARGIN, 4
-        BOTTOMMARGIN, 180
+        BOTTOMMARGIN, 197
     END
 
     IDD_HWSETUP, DIALOG
