Ctrl+Up and Ctrl+Down to go to the previous and next pages when in preview mode

--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -139,6 +139,7 @@ BEGIN
     VK_BACK,        IDM_CHANNEL_PREVIOUS,   VIRTKEY, CONTROL, NOINVERT
     VK_DELETE,      IDM_SLEEPMODE,          VIRTKEY, NOINVERT
     VK_DOWN,        IDM_VT_PAGE_DOWN,       VIRTKEY, NOINVERT
+    VK_DOWN,        IDM_PREVIEW_PAGE_NEXT,  VIRTKEY, CONTROL, NOINVERT
     VK_END,         IDM_PLAYLIST_LAST,      VIRTKEY, CONTROL, NOINVERT
     VK_ESCAPE,      IDM_RETURN_TO_WINDOW,   VIRTKEY, NOINVERT
     VK_F1,          IDM_HELP_README,        VIRTKEY, NOINVERT
@@ -170,8 +171,8 @@ BEGIN
     VK_F7,          IDM_SOURCE_INPUT7,      VIRTKEY, CONTROL, ALT, NOINVERT
     VK_F8,          IDM_TELETEXT_KEY4,      VIRTKEY, NOINVERT
     VK_F8,          IDM_SOURCE_INPUT8,      VIRTKEY, CONTROL, ALT, NOINVERT
-    VK_F9,          IDM_SOURCE_INPUT9,      VIRTKEY, CONTROL, ALT, NOINVERT
     VK_F9,          IDM_TELETEXT_KEY5,      VIRTKEY, NOINVERT
+    VK_F9,          IDM_SOURCE_INPUT9,      VIRTKEY, CONTROL, ALT, NOINVERT
     VK_HOME,        IDM_CHANNEL_LIST,       VIRTKEY, NOINVERT
     VK_HOME,        IDM_PLAYLIST_FIRST,     VIRTKEY, CONTROL, NOINVERT
     VK_INSERT,      IDM_CHANNEL_PREVIEW,    VIRTKEY, NOINVERT
@@ -203,6 +204,7 @@ BEGIN
     VK_SUBTRACT,    IDM_VOLUMEMINUS,        VIRTKEY, NOINVERT
     VK_TAB,         IDM_TOGGLE_MENU,        VIRTKEY, NOINVERT
     VK_UP,          IDM_VT_PAGE_UP,         VIRTKEY, NOINVERT
+    VK_UP,          IDM_PREVIEW_PAGE_PREV,  VIRTKEY, CONTROL, NOINVERT
     "W",            IDM_PIXELWIDTH_MINUS,   VIRTKEY, NOINVERT
     "W",            IDM_PIXELWIDTH_PLUS,    VIRTKEY, SHIFT, NOINVERT
     "W",            IDM_PIXELWIDTH_CURRENT, VIRTKEY, SHIFT, CONTROL, 
