--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -994,7 +994,7 @@ IDD_TOOLBAR_LOGO DIALOG DISCARDABLE  0, 0, 84, 8
 STYLE WS_CHILD | WS_CLIPSIBLINGS | WS_CLIPCHILDREN
 FONT 14, "MS Sans Serif"
 BEGIN
-    RTEXT           "DScaler Version 4.0.0",IDC_TOOLBAR_LOGO_LOGO,9,0,72,8,
+    CTEXT           "DScaler Version 4.0.0",IDC_TOOLBAR_LOGO_LOGO,9,0,72,8,
                     SS_CENTERIMAGE
 END
 
@@ -1078,18 +1078,20 @@ BEGIN
                     IDC_STATIC,40,5,180,10
 END
 
-IDD_TOOLBAR_MEDIAPLAYER DIALOG DISCARDABLE  0, 0, 216, 16
+IDD_TOOLBAR_MEDIAPLAYER DIALOG DISCARDABLE  0, 0, 272, 16
 STYLE WS_CHILD | WS_CLIPSIBLINGS | WS_CLIPCHILDREN
 FONT 8, "MS Sans Serif"
 BEGIN
     CONTROL         "Slider1",IDC_TOOLBAR_MEDIAPLAYER_TIMESLIDER,
-                    "msctls_trackbar32",WS_TABSTOP,52,1,156,13
+                    "msctls_trackbar32",WS_TABSTOP,108,1,156,13
     CONTROL         "",IDC_TOOLBAR_MEDIAPLAYER_PLAY,"Button",BS_OWNERDRAW | 
                     BS_ICON,0,0,16,16
     CONTROL         "",IDC_TOOLBAR_MEDIAPLAYER_PAUSE,"Button",BS_OWNERDRAW | 
                     BS_ICON,15,0,16,16
     CONTROL         "",IDC_TOOLBAR_MEDIAPLAYER_STOP,"Button",BS_OWNERDRAW | 
                     BS_ICON,31,0,16,16
+    CTEXT           "000:00 / 000:00",IDC_TOOLBAR_MEDIAPLAYER_ELAPSED,52,4,
+                    56,8,SS_CENTERIMAGE
 END
 
 
@@ -1944,9 +1946,8 @@ BEGIN
 
     IDD_TOOLBAR_LOGO, DIALOG
     BEGIN
-        LEFTMARGIN, 2
+        LEFTMARGIN, 1
         RIGHTMARGIN, 81
-        TOPMARGIN, 7
         BOTTOMMARGIN, 1
     END
 
@@ -1985,7 +1986,7 @@ BEGIN
     IDD_TOOLBAR_MEDIAPLAYER, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 208
+        RIGHTMARGIN, 264
         TOPMARGIN, 7
         BOTTOMMARGIN, 5
     END
