Temporary skin for the media player toolbar using existing graphics of other toolbars

--- a/DScaler/Release/Skins/default/skin.ini
+++ b/DScaler/Release/Skins/default/skin.ini
@@ -190,7 +190,7 @@ PreviousClick=20,660,36,676
 # The volume slider:
 #
 #  Volume[MouseOver|Click]=left,right,top,bottom
-#  Selected[MouseOver|Click]=left,right,top,bottom
+#  VolumeSelected[MouseOver|Click]=left,right,top,bottom
 #
 # The channel indicator (Channel 0-3: mono, stereo, lang1, lang2)
 #
@@ -216,6 +216,7 @@ VolumeSelected=43,430,142,446
 
 #Mono
 SoundChannel=0,700,30,716
+
 #Stereo
 SoundChannel1=120,700,150,716
 
@@ -224,3 +225,15 @@ SoundChannel2=240,700,270,716
 
 #Lang 2
 SoundChannel3=0,720,30,736
+
+
+[MediaPlayerBar]
+Bitmap=skin1.bmp
+Mask=skin1_mask.bmp
+
+ElapsedTime=43,460,140,476
+ElapsedTimeSelected=43,430,142,446
+
+Play=60,660,76,676
+Pause=60,660,76,676
+Stop=60,660,76,676
