Hide the version part of the logo in the default skin

--- a/DScaler/Release/Skins/default/skin.ini
+++ b/DScaler/Release/Skins/default/skin.ini
@@ -158,7 +158,9 @@ MarginsTop=5,5,5,5,0,5
 [LogoBar]
 Bitmap=skin1.bmp
 Mask=skin1_mask.bmp
-Logo=0,530,171,544
+# Hide the version part of the logo
+# Logo=0,530,171,544
+Logo=0,530,68,544
 
 # Logobar
 #
