"Audio decoder" field hidden because no more set by the application

--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -243,8 +243,8 @@ BEGIN
     LTEXT           "",IDC_BT_AUTODECTECT_ID,66,45,125,10
     LTEXT           "Tuner:",IDC_STATIC,5,60,45,10
     LTEXT           "",IDC_TUNER_TYPE,66,60,125,10
-    LTEXT           "Audio Decoder:",IDC_STATIC,5,70,51,10
-    LTEXT           "",IDC_AUDIO_DECODER_TYPE,66,70,125,10
+    LTEXT           "Audio Decoder:",IDC_STATIC,5,70,51,10,NOT WS_VISIBLE
+    LTEXT           "",IDC_AUDIO_DECODER_TYPE,66,70,125,10,NOT WS_VISIBLE
 END
 
 IDD_CHANNELLIST DIALOGEX 22, 17, 357, 241
