--- a/DScaler5/GenDMOProp/GenDMOProp.vcproj
+++ b/DScaler5/GenDMOProp/GenDMOProp.vcproj
@@ -87,7 +87,7 @@ echo regsvr32 exec. time &gt; &quot;$(OutDir)\regsvr32.trg&quot;
 			ConfigurationType="2"
 			UseOfMFC="0"
 			UseOfATL="1"
-			ATLMinimizesCRunTimeLibraryUsage="TRUE"
+			ATLMinimizesCRunTimeLibraryUsage="FALSE"
 			CharacterSet="2">
 			<Tool
 				Name="VCCLCompilerTool"
@@ -118,6 +118,8 @@ echo regsvr32 exec. time &gt; &quot;$(OutDir)\regsvr32.trg&quot;
 				OutputFile="..\Release/GenDMOProp.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
+				IgnoreAllDefaultLibraries="FALSE"
+				IgnoreDefaultLibraryNames="ATLMINCRT.LIB"
 				ModuleDefinitionFile=".\GenDMOProp.def"
 				ProgramDatabaseFile=".\Release/GenDMOProp.pdb"
 				SubSystem="2"
